@@ -2,6 +2,7 @@ English Lead ChangeLog
 
 ***** ChangeLog for 1.12 compared to 1.11 *****
 NEW : Add developer feature to manage template
+NEW : Add quick search on Lead Ref
 
 ***** ChangeLog for 1.11 compared to 1.10 *****
 NEW : Add feature to create event linked to lead
